fix dockfx for javafx11