@@ -1,34 +1,41 @@
+plugins {
+    id 'org.openjfx.javafxplugin' version '0.0.7'
+    id "org.jetbrains.gradle.plugin.idea-ext" version "0.5"
+}
+
+apply plugin: 'idea'
+
 group = 'org.dockfx'
 description = 'DockFX'
 
-//  apply plugin: 'io.franzbecker.gradle-lombok'
-//apply plugin: 'java'
-//apply plugin: 'java-library'
-//apply plugin: 'idea'
+//test {
+//    jvmArgs '--add-modules', 'java.xml.bind'
+//}
 
-/*sourceCompatibility = 1.8
-targetCompatibility = 1.8
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
+def exports = ["--add-exports", "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+               "--add-exports", "javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED",
+               "--add-exports", "javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED"
+]
 
-repositories {
-    mavenLocal()
-    maven { url "http://repo.maven.apache.org/maven2" }
-    maven { url "http://dl.bintray.com/jerady/maven" }
-    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-}
-
-
-dependencies {
-    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
-    compile group: 'com.google.guava', name: 'guava', version: '25.0-jre'
-    compile group: 'commons-io', name: 'commons-io', version: '2.6'
-    compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    //compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
-    compileOnly files("$rootDir/lombok-edge.jar")
+/*idea.project.settings {
+    compiler {
+        javac {
+            javacAdditionalOptions "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED" +
+                    " --add-exports=javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED" +
+                    " --add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED"
+        }
+    }
 }*/
+
+javafx {
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs = exports
+    options.compilerArgs << "-Xlint:none" << "-nowarn"
+
+    options.fork = true
+    options.forkOptions.executable = "javac"
+}
 
